# zagg

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  catalog_comparison.ipynb  environment.yml  full_aoi_series.parquet  metrics.json  metrics_209_blob.json  metrics_209_vlen_bytes_neon.json  metrics_209_vlen_bytes_rgt.json  metrics_moc_sizing.json  mkdocs.yml  pyproject.toml  raster_series.parquet  results_neon.json  rgt_shardmap.py  run_both.sh  scripts_209_blob_measure.py  scripts_209_vlen_bytes_probe.py  scripts_measure_option_a.py  series.parquet
.binder/: environment.yml  postBuild
.github/actions/run-benchmark/: action.yml
.github/scripts/: bench209.py  bench209b.py  bench_metrics.py  bench_objects.py  deploy_lambda.sh  distribute_zips.sh  exp_meta.py  exp_sparse.py  full_aoi_series.py  moc_sizing.py  plot_series.py  plot_summary.py  raster_series.py  run_benchmark.py  run_full_aoi_benchmark.py  run_raster_benchmark.py  update_series.py  vlen_shard_exp.py
.github/workflows/: benchmark-drift.yml  build-lambda-layers.yml  docs-preview-comment.yml  docs.yml  lambda-benchmark-command.yml  lambda-benchmark-fullaoi.yml  lambda-benchmark.yml  lambda-build-reusable.yml  lambda-build.yml  lint.yml  publish.yml  test.yml
archive/dask-prototype/: QUERY.md  README.md  demo_s3_xdggs.ipynb  example_usage.py  query_cmr_direct_atl06.py  query_cmr_stac_atl06.py
bench/: REPORT.md  drift_catalog.py  layout_access.ipynb  layout_access_numpy.ipynb  layout_materialize.py  neon_order_sweep.py  neon_selection_idsets.py  neon_selection_investigation.py  neon_selection_spherecheck.py
bench/drift/: BASELINE_REPORT.md
bench/h5coro/: .gitignore  Containerfile  Containerfile.hidefix  README.md  bench_replay.py  capture_requests.py  hidefix_spike.py
bench/h5coro/patches/: 0001-vectorize-shuffleChunk-as-a-numpy-byte-matrix-transp.patch
bench/h5coro/requests/: o10.json  o9.json
bench/h5coro/results/: REPORT.md  checksums_o10.json  checksums_o9.json  hidefix_spike_notes.md  profile_o10_h5coro-1.0.4.json  profile_o10_h5coro-numpy.json  profile_o9_h5coro-1.0.4.json  replay_o10_h5coro-1.0.4-linux-arm64.json  replay_o10_h5coro-1.0.4.json  replay_o10_h5coro-1.0.5-main.json  replay_o10_h5coro-numpy-linux-arm64.json  replay_o10_h5coro-numpy.json  replay_o9_h5coro-1.0.4.json  (+11 more)
bench/h5coro/shim/: CMakeLists.txt  Containerfile.shim  build.sh  shim.cpp  sliderule-minimal-build.patch
bench/offsets/: README.md  crosscheck_hidefix.py  extract_offsets.py  fetch_88s_sample.py
benchmarks/: handoff_bench.py  mortie_order_sweep.py  region_timing.py
data/conus/: build_conus_polygon.py  build_conus_shardmap.py  conus.geojson  conus_basemap_ne10m.geojson  conus_final_estimate.py  conus_regression_shards.json  conus_regression_shards_o8.json  conus_regression_submap.json  conus_regression_submap_o8.json  conus_regression_submap_o8_oom5.json  conus_shard_granule_counts.parquet  conus_shard_granule_counts_o8.parquet  conus_shard_stats.json  conus_shard_stats_o8.json  estimate_with_ci.py  plot_conus_shardmap.py  run_conus_regression.py  select_regression_shards.py
deployment/: LAMBDA_DEPLOYMENT.md
deployment/aws/: EXECUTION_ROLE.md  benchmark_cicd.yaml  build_arm64_layer.sh  build_function.sh  build_layer.sh  build_layer_v14.sh  deploy.sh  execution_role.yaml  invoke_lambda.py  lambda_handler.py  publish_mirror.sh  stand_up.sh  template.yaml
docs/: ARCHITECTURE.md  LAMBDA.md  LAMBDA_ARM64.md  aoi_mask.md  hive_layout.md  index.md  morton_arrow.md  quickstart.md  ragged_layout.md  rectilinear.md  sharding.md  temporal_events.md  virtual_index.md
docs/api/: auth.md  catalog.md  config.md  processing.md  schema.md  store.md
docs/deployment/: arm64.md  benchmark-cicd.md  benchmark.md  conus_estimate.md  execution-role.md  lambda.md  standup.md
docs/design/: architecture.md  generalized_grids.md  schema.md  sparse_coverage.md
lambda/: INSTRUCTIONS_ARM.md  PLAN_credential_refactor.md  README.md  build_arm64_layer.sh  build_granule_catalog.py  build_layer.sh  build_layer_v14.sh  deploy_function.sh  deploy_lambda.sh  invoke_parallel.py  invoke_production.py  invoke_single_cell.py  lambda_handler.py  orchestrator_auth.py  query_cmr_with_polygon.py  requirements.txt  visualize_production_results.ipynb
notebooks/: aoi_mask.ipynb  cost_reporting.ipynb  cryocloud_example.ipynb  custom_aggregations.ipynb  jupyterhub_example.ipynb  rasterized_zarr.ipynb  sentinel2_fusion.ipynb  shardmap_viewer.ipynb  sponsor_end_to_end.ipynb  sponsor_read_only.ipynb  tdigest_reader_example.ipynb  visualize_production_results.ipynb  visualize_zarr_results.ipynb
notebooks/data/: cat_serc_atl03_007.parquet  sm_serc_healpix_o10.json
out.zarr/: morton_hive.json
preview/: index.html
site/: index.html  latest.md  metrics.json
src/magg/: __init__.py  __main__.py  auth.py  catalog.py  config.py  orchestrate.py  processing.py  runner.py  schema.py  store.py  temporal.py
src/zagg/: __init__.py  __main__.py  adapters.py  auth.py  backends.py  catalog.py  concurrency.py  config.py  coverage.py  csr.py  dedup.py  dispatch.py  hive.py  notebook.py  processing.py  read_plan.py  registry.py  runner.py  schema.py  semantics.py  store.py  sweep.py  telemetry.py  temporal.py  windows.py
tests/: conftest.py  test_adapters.py  test_aoi_mask.py  test_apriori.py  test_auth.py  test_benchmark.py  test_benchmark_objects.py  test_benchmark_shardmap.py  test_catalog.py  test_concurrency.py  test_config.py  test_conus_regression.py  test_coverage.py  test_coverage_root.py  test_csr.py  test_dedup.py  test_deploy_lambda.py  test_dispatch.py  test_distribute_zips.py  test_extract.py  test_full_aoi_benchmark.py  test_full_aoi_series.py  test_grids.py  test_hive.py  test_hive_windows.py  test_index.py  test_integration.py  test_lambda_build.py  test_lambda_handler.py  test_lambda_raster_handler.py  test_moc_sizing.py  test_morton_arrow.py  test_notebook.py  test_output.py  test_process_event.py  test_processing.py  test_raster.py  test_raster_benchmark.py  test_raster_pipeline.py  test_raster_runner.py  (+21 more)
(+122 files in other folders)
