[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zagg"
dynamic = ["version"]
description = "Multi-resolution aggregation for ICESat-2 ATL06 data using morton/healpix indexing"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Shane Grigsby", email = "refuge@rocktalus.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "h5coro>=0.0.8",
    "mortie>=0.6.3",
    "healpy",
    "earthaccess",
    "boto3",
    "fastparquet",
    "pyarrow",
    "pydantic-zarr>=0.9.1",
    "zarr>=3.1.5",
    "obstore>=0.8.2",
    "pyyaml",
    "pyproj",
    "shapely",
]

[project.optional-dependencies]
lambda = [
    "cramjam",
    "astropy",
]
analysis = [
    "cubed>=0.24.0",
    "cubed-xarray>=0.0.9",
    "xarray[io]",
    "xdggs",
    "geopandas",
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "notebook",
]
test = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/englacial/zagg"
Repository = "https://github.com/englacial/zagg"
Issues = "https://github.com/englacial/zagg/issues"

[project.scripts]
zagg = "zagg.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zagg/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zagg"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/zagg",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "W", "I", "N"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zagg"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]
