[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "zagg"
dynamic = ["version"]
description = "Multi-resolution aggregation for ICESat-2 ATL06 data using morton/healpix indexing"
readme = "README.md"
# Upper bound excludes 3.14+: numpy is pinned to 2.2.6 for the arm64 Lambda layer
# (see deployment/aws/build_layer.sh), and 2.2.6 has no CPython 3.14 support — the
# ABI mismatch silently corrupts results (issue #31). Lambda runtime is 3.12.
requires-python = ">=3.12,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "Shane Grigsby", email = "refuge@rocktalus.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "h5coro>=1.0.3",
    "mortie>=0.8.1",
    "earthaccess",
    "boto3",
    "fastparquet",
    "pyarrow",
    "pydantic-zarr>=0.9.1",
    "zarr>=3.1.5",
    "obstore>=0.8.2",
    "pyyaml",
    "pyproj",
    "shapely",
    "odc-geo",
]

[project.optional-dependencies]
lambda = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "pyarrow==24.0.0",
    "h5coro==1.0.4",
    "cramjam",
    "astropy",
]
# STAC fetch + shard-map build deps. Kept out of core so the Lambda layer build
# (which doesn't run fetch/build) stays lean.
#
# Spherely (exact-S2 `SpatialIndex`) is intentionally NOT listed: it's a fork
# not on PyPI (benbovy/spherely#118), and PyPI forbids direct-URL deps. Install
# it separately for the exact-S2 catalog backend; without it, `auto` falls back
# to mortie (HEALPix) / shapely (rectilinear):
#   pip install "spherely @ https://github.com/espg/spherely/releases/download/v0.1.1-spatialindex/spherely-0.1.1+spatialindex-cp312-cp312-manylinux_2_28_x86_64.whl"
catalog = [
    "stac-geoparquet>=0.7.0",
]
analysis = [
    "cubed>=0.24.0",
    "cubed-xarray>=0.0.9",
    "xarray[io]",
    "xdggs",
    "geopandas",
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "notebook",
]
# Lean extra for the Lambda-benchmark CI plotting step (issue #110). pyarrow is
# already a core dep; this just pulls in matplotlib (same pin as analysis) so the
# benchmark workflow doesn't install the heavy analysis stack.
benchmark = [
    "matplotlib>=3.10.8",
]
test = [
    "pytest>=8.0",
    "stac-geoparquet>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/englacial/zagg"
Repository = "https://github.com/englacial/zagg"
Issues = "https://github.com/englacial/zagg/issues"

[project.scripts]
zagg = "zagg.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zagg/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zagg"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/zagg",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "W", "I", "N"]
lint.ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["zagg"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]
